# binaries

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  config.toml  config.yaml  config.yml  data.sql  design.drawio  docker-compose.yml  mvn.py  schema.sql  table_sqlite.sql  test.Dockerfile
src/: binary.rs  config.rs  dao.rs  extract.rs  github.rs  lib.rs  main.rs  manager.rs  package.rs  source.rs  updated_info.rs  util.rs
src/binary/: github.rs
src/config/: c.rs  file.rs  mod.rs  raw.rs
src/dao/: update_info.rs
src/source/: github.rs
tests/: bottom_latest_release.json  clash_latest_release.json  clash_releases.json
