[package]
name = "binaries"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.56"
async-trait = "0.1.53"
chrono = "0.4.19"
env_logger = "0.9.0"
log = "0.4.16"
mime = "0.3.16"
mime_guess = "2.0.4"
os_info = "3.2.0"
regex = "1.5.5"
reqwest = "0.11.10"
serde_json = "1.0.79"
serde = { version = "1", features = ["derive"] }
rbson = "2.0"
tokio = { version = "1.17.0", features = [
    "rt-multi-thread",
    "macros",
    "sync",
    "test-util",
] }
url = "2.2.2"
rbatis = { version = "3.1", default-features = false, features = [
    "runtime-tokio-rustls",
    "sqlite",
    "debug_mode",
] }
once_cell = "1.10.0"
ctor = "0.1.22"
