[package]
name = "binaries"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.56"
async-trait = "0.1.53"
chrono = { version = "0.4.19", features = ["serde"] }
env_logger = "0.9.0"
log = "0.4.16"
mime = "0.3.16"
mime_guess = "2.0.4"
os_info = "3.2.0"
regex = "1.5.5"
reqwest = { version = "0.11.10", features = ["stream", "json"] }
serde_json = "1.0.79"
serde = { version = "1", features = ["derive"] }
tokio = { version = "1.17.0", features = [
    "rt-multi-thread",
    "macros",
    "sync",
    "test-util",
    "process",
    "parking_lot",
] }
url = "2.2.2"
once_cell = "1.10.0"
ctor = "0.1.22"
# sea-orm = { version = "^0", features = [
#     "sqlx-sqlite",
#     "runtime-tokio",
#     "macros",
#     "runtime-tokio-rustls",
#     "debug-print",
# ] }
tracing = "0.1.33"
tracing-subscriber = "0.3.11"
sqlx = { version = "0.5.11", features = [
    "runtime-tokio-rustls",
    "sqlite",
    "chrono",
    "macros",
] }
futures-util = "0.3.21"
getset = "0.1.2"
tempfile = "3.3.0"
directories = "4.0.1"
globset = "0.4.8"
walkdir = "2.3.2"
shell-words = "1.1.0"
tar = "0.4.38"
which = "4.2.5"
hyper_serde = "0.13.0"
derive_builder = "0.11.1"
zip = "0.6.2"
flate2 = "1.0.23"
zip-extract = "0.1.1"
md-5 = "0.10.1"
infer = "0.7.0"
handlebars = "4.2.2"
toml = "0.5.9"
num_cpus = "1.13.1"
clap = { version = "3.1.12", features = ["derive"] }
strum = { version = "0.24.0", features = ["derive"] }
strum_macros = "0.24.0"

[dev-dependencies]
dotenv = "0.15.0"
tempfile = "3.3.0"

[profile.release]
opt-level = 'z'     # Optimize for size.
lto = true          # Enable Link Time Optimization
codegen-units = 1   # Reduce number of codegen units to inc
panic = 'abort'     # Abort on panic
strip = true        # Strip symbols from binary*
